# bluetooth_inverter_power_watch

./: .gitignore  build.sh  readme.md
.github/workflows/: rust.yml
bt/: .env  Cargo.toml
bt/src/: main.rs
bt/src/inverter/: mod.rs
bt/src/inverter/bt/: mod.rs
bt/src/usb_can_battery/: mod.rs  server.rs
bt/src/usb_can_battery/dyness/: mod.rs
bt/src/web/: index.html
extras/bash_utils/: autoconnect.sh  bt.service  install.sh  update.sh
extras/docker/: docker-compose.yml  readme.md
extras/gnome_extensions/: .xdp-qt_temp.iXtRhc-Djy352  readme.md
extras/gnome_extensions/v47.1/solarinverter@rgm.com/: extension.js  metadata.json  prefs.js  readme.md
extras/gnome_extensions/v47.1/solarinverter@rgm.com/schemas/: gschemas.compiled  org.gnome.shell.extensions.solarinverter.gschema.xml
extras/grafana_dashboard/: Grafana dashboard - Inversor VMK III 5000VA.json
extras/udev_rules/: 99-canbus.rules  readme.md
