[package]
name = "bt"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true       # Automatically strip symbols from the binary.
lto = true
incremental = true

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
serde = "1.0.148"
serde_json = "1.0.89"
bluer = { version = "0.15", features = ["full"] }
tokio = { version = "1.20.1", features = ["full"] }
futures = "0.3.23"
uuid = { version = "1", features = ["v4"] }
influxdb2 = "0.4"
influxdb2-structmap = "0.2"
num-traits = "0.2"
chrono = "0.4"
dotenvy = "0.15.7"
hex = "0.4.3"
actix-web = "4"
