[package]
name = "bt"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true       # Automatically strip symbols from the binary.
lto = true
incremental = true

[dependencies]
openssl = { version = "0.10.68", features = ["vendored"] }
serde = "1.0.215"
serde_json = "1.0.133"
bluer = { version = "0.17.3", features = ["full"] }
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3.31"
uuid = { version = "1.11.0", features = ["v4"] }
influxdb2 = "0.5.2"
influxdb2-structmap = "0.2"
num-traits = "0.2.19"
chrono = "0.4.38"
dotenvy = "0.15.7"
hex = "0.4.3"
actix-web = "4.9.0"
bit-array = "0.4.4"
typenum = "1.17.0"
byteorder = "1.5.0"
serialport = "4.6.1"
actix-cors = "0.7.0"
